# datagov-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RESPONSE_SUMMARY.md  VISUALIZATION_DEMO.md  client.py  demo_chart.html  demo_map.html  main.py  pyproject.toml  requirements.txt  screenshots_demo.html  server.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
datagov_mcp/: __init__.py  api.py  client.py  server.py  visualization.py
tests/: __init__.py  test_api.py  test_contracts.py  test_tools.py  test_visualization.py
utils/: release_ports.py
